// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> 자식 컴포넌트가 들어온 경우 그려준다 1`] = `
.c0 {
  margin-right: 0.25rem;
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  color: #FFF;
  background-color: #424242;
  border-radius: 0.25rem;
  white-space: nowrap;
}

<div
  class="c0"
>
  test
</div>
`;

exports[`<Tag /> 정상적으로 렌더링된다 1`] = `
.c0 {
  margin-right: 0.25rem;
  padding: 0.25rem 0.5rem;
  font-size: 0.75rem;
  color: #FFF;
  background-color: #424242;
  border-radius: 0.25rem;
  white-space: nowrap;
}

<div
  class="c0"
/>
`;
